# YLAB

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  test.env
app/: main.py
app/admin/: Menu.xlsx
app/celery/: tasks.py  worker.py
app/core/: config.py
app/db/: base.py  base_class.py  database.py
app/db/CRUD/: dish.py  menu.py  menus.py  submenu.py
app/db/models/: dish.py  dish_model.py  menu.py  menu_model.py  submenu.py  submenu_model.py
app/repositories/: dish_repository.py  menu_repository.py  submenu_repository.py
app/routers/: base.py  dish_routers.py  menu.py  menu_routers.py  submenu.py  submenu_routers.py
app/schemas/: dish.py  dish_schemas.py  menu.py  menu_schemas.py  submenu_schemas.py
app/utils/: cache_utils.py  counter.py  excel_reader.py  repository.py
tests/: conftest.py
tests/functional/: dish_test.py  fixtures.py  menu_test.py  submenu_test.py
tests/unit/: conftest.py  menu_test.py
