[tool.poetry]
name = "ylab"
version = "0.1.0"
description = "FastAPI HW"
authors = ["samolin <samolin.vlad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
requests = "^2.31.0"
httpx = "^0.24.1"
pydantic-settings = "^2.0.2"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
